{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 42,
  "lineage": "ac6ca4b7-8995-478e-3357-bc0a99ad2e15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-04a39c33550291e7d",
            "id": "rtb-04a39c33550291e7d",
            "owner_id": "786333078684",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tf_private"
            },
            "vpc_id": "vpc-0fa9e4c0bd369771c"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09a17330e2a3908cd",
            "owner_id": "786333078684",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0fa9e4c0bd369771c"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05a7e0ca884273709",
            "owner_id": "786333078684",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a17330e2a3908cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public"
            },
            "vpc_id": "vpc-0fa9e4c0bd369771c"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b79a2078b0182344",
            "route_table_id": "rtb-05a7e0ca884273709",
            "subnet_id": "subnet-0beb3341a5df41df2"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad7c607efc9a08ec",
            "route_table_id": "rtb-05a7e0ca884273709",
            "subnet_id": "subnet-02ac493906f05d317"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786333078684:security-group/sg-0233c46a0dcb5ec6a",
            "description": "used for accessing to public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0233c46a0dcb5ec6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": null,
            "owner_id": "786333078684",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0fa9e4c0bd369771c"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786333078684:subnet/subnet-0beb3341a5df41df2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-0beb3341a5df41df2",
            "map_public_ip_on_launch": true,
            "owner_id": "786333078684",
            "tags": {
              "Name": "tf_public_subnet_1"
            },
            "vpc_id": "vpc-0fa9e4c0bd369771c"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786333078684:subnet/subnet-02ac493906f05d317",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-02ac493906f05d317",
            "map_public_ip_on_launch": true,
            "owner_id": "786333078684",
            "tags": {
              "Name": "tf_public_subnet_2"
            },
            "vpc_id": "vpc-0fa9e4c0bd369771c"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786333078684:vpc/vpc-0fa9e4c0bd369771c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-034e58262c93a6330",
            "default_route_table_id": "rtb-04a39c33550291e7d",
            "default_security_group_id": "sg-0a9644633dff6b6a1",
            "dhcp_options_id": "dopt-0855c170",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fa9e4c0bd369771c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04a39c33550291e7d",
            "owner_id": "786333078684",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}